better names for npm scripts

--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "Google Chrome extension that allows for easy viewing of salesforce metadata dependencies",
   "main": "index.html",
   "scripts": {
-    "start": "npm run watch:all",
+    "start": "npm run start-dev",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server",
-    "watch:less": "onchange 'css/*.less' -- npm run cless",
-    "cless": "lessc css/styles.less css/styles.css",
-    "watch:all": "parallelshell 'npm run watch:less' 'npm run lite'",
-    "clean": "rimraf dist",
-    "copyFonts": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
-    "imagemin": "imagemin img/* -o dist/img",
-    "usemin": "usemin index.html -d dist --htmlmin -o dist/index.html",
-    "build":"npm run clean && npm run copyFonts && npm run usemin"
+    "monitor-less-files": "onchange 'css/*.less' -- npm run cless",
+    "compile-less-files": "lessc css/styles.less css/styles.css",
+    "start-dev": "parallelshell 'npm run monitor-less-files' 'npm run lite'",
+    "clean-dist": "rimraf dist",
+    "copy-fonts-to-dist": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
+    "min-images-to-dist": "imagemin img/* -o dist/img",
+    "min-all-files": "usemin index.html -d dist --htmlmin -o dist/index.html",
+    "build":"npm run clean-dist && npm run copy-fonts-to-dist && npm run min-images-to-dist && npm run min-all-files"
   },
   "author": "Pablo Gonzalez",
   "license": "ISC",
